# numerorum-primorum

./: .gitignore  README.md  pyproject.toml
src/numerorum_primorum/: __init__.py  main.py  utils.py
tests/: test_utils.py
