[project]
name = "numerorum-primorum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Althaf Muhammad", email = "zoory9900@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "sympy>=1.14.0",
]

[project.scripts]
numerorum-primorum = "numerorum_primorum:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
